0.13.3.AA (Pre-Release):
-----------------------
- Synced with Upstream 0.13.3
- Fixes `DisableAMFI` Feature
  * The feature had been disabled under some circumstances
  * This bug was introduced in v0.13.2.AP (Commit 8705fdb)
- Removes `PanicFilter` Feature
  * The feature is not used by the target unsupported units in RefindPlus and creates issues on supported units


0.13.2.AP (19 Apr 2022):
-----------------------
- Adds `PanicFilter` Feature
  * RefindPlus now discards NVRAM write attempts of kernel panic information by default
  * Can be disabled using a new `decline_panicfilter` configuration token
  * Currently limited to when directly booting MacOS from RefindPlus
- Adds `SupplyAppleFB` Feature
  * Attempts to provide AppleFramebuffers on Macs when absent under certain circumstances
  * Can be disabled using a new `decline_applefb` configuration token
- Adds `TextHelp` Feature
  * Uses complementary text colours to improve legibility
  * Can be disabled using a new `decline_texthelp` configuration token
    - Only when using a custom title banner
    - Always on when using the default title banner
- Adds `IconRowMove` Feature
  * Allows repositioning the icon row position on the RefindPlus screen
    - Sometimes needed when icons block parts of custom banners
  * Base position can be specified using a new `icon_row_move` configuration token
- Adds `IconRowTune` Feature
  * Allows adjustments to the `IconRowMove` position
  * Offset value can be specified using a new `icon_row_tune` configuration token
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions
    - This renders them inaccessible or may even lead to RefindPlus hanging
  * Such partitions can be unlocked by setting a new `ransom_drives` configuration token
  * This option is currently always disabled on Apple firmware
- Adds `RescanDXE` Feature
  * Controls scanning for newly revealed DXE drivers when connecting handles